# the-nerve

./: .github_docs_review.txt  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  test_json_data.py  test_player.py  test_quick_validate.py
data/genres/cyberpunk/dialogues/: dialogue_bartender_intro.json
data/genres/cyberpunk/enemies/: street_thug_tutorial.json
data/genres/cyberpunk/items/: credits_50.json  medkit_basic.json  synth_whiskey.json
data/genres/cyberpunk/locations/: golden_drake_tavern.json
data/genres/cyberpunk/npcs/: bartender_tom.json
docs/: .gitignore  ARCHITECTURE.md  BRANDING_UPDATE.md  GDD.md  VERTICAL_SLICE.md
src/: __init__.py  main.py
src/core/: __init__.py  event_dispatcher.py  game_state.py  save_manager.py
src/data/: __init__.py  loader.py
src/entities/: __init__.py  player.py
src/utils/: __init__.py  dice.py
